# MCP_Langgraph_Agent

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  chat_agent.py  google_auth.py  mcp_server.py  pyproject.toml  railway.json  start.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: Composer.jsx  Icons.jsx  Message.jsx  Welcome.jsx
frontend/src/lib/: markdown.jsx  sse.js
