[project]
name = "mcp-agent-project"
version = "0.1.0"
description = "MCP + LangGraph Agent System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "geopy>=2.4.1",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.1",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.0.8",
    "lxml>=6.1.1",
    "mcp>=1.26.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pytz>=2026.1.post1",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]
